cambios en mascara de cantidades de venta

--- a/ProyectoVenta/appsettings.json
+++ b/ProyectoVenta/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "CadenaSQL": "Data Source=CF0077; Initial Catalog=DBVENTA_CORE; User Id=sa; Password=Mesa123456789;"
+    "CadenaSQL": "Data Source=SQL8005.site4now.net ; Initial Catalog=db_a97bca_dsi; User Id=db_a97bca_dsi_admin; Password=Admin.*12345;"
   },
   "Logging": {
     "LogLevel": {
