adicion de vista cliente

--- a/ProyectoVenta/appsettings.json
+++ b/ProyectoVenta/appsettings.json
@@ -1,6 +1,7 @@
 {
   "ConnectionStrings": {
-    "CadenaSQL": "Data Source=SQL8005.site4now.net ; Initial Catalog=db_a97bca_dsi; User Id=db_a97bca_dsi_admin; Password=Admin.*12345;"
+    //"CadenaSQL": "Data Source=cf0077 ; Initial Catalog=DBVENTA_CORE; User Id=sa; Password=Mesa123456789;"
+    "CadenaSQL": "Server=promecysapi.mssql.somee.com,1433;Initial Catalog=promecysapi;Persist Security Info=True;User ID=mrskull_SQLLogin_1;Password=qyrhrbyztz;TrustServerCertificate=True;MultipleActiveResultSets=true"
   },
   "Logging": {
     "LogLevel": {
